objects/Multi_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <description>This field has CEE request lookup id.</description>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>Multi Opportunities</relationshipLabel>
        <relationshipName>Multi_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <formula>Opportunity__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Value_000s__c</fullName>
        <formula>Opportunity__r.Expected_Total_Value_000_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Value(000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Value_Summary_000s__c</fullName>
        <label>Deal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed is loopup to opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Multi Opportunities</relationshipLabel>
        <relationshipName>Multi_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This Object used for adding multiple opportunities for 1 CEE request.</description>
    <label>Multi Opportunity</label>
    <nameField>
        <displayFormat>MO-{0000}</displayFormat>
        <label>Multi Opportunity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>